--- a/ionic.project
+++ b/ionic.project
@@ -1,5 +1,13 @@
 {
   "name": "drinkon-client",
   "email": "",
-  "app_id": ""
+  "app_id": "",
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
